--- a/package.json
+++ b/package.json
@@ -13,5 +13,17 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
-  }
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/averdi/daregame.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/averdi/daregame/issues"
+  },
+  "homepage": "https://github.com/averdi/daregame#readme",
+  "description": ""
 }
