--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.1",
     "mongoose": "^4.4.12",
     "morgan": "~1.6.1",
+    "querystring": "^0.2.0",
     "serve-favicon": "~2.3.0"
   },
   "repository": {
