--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "instagram-node": "^0.5.8",
     "mongoose": "^4.4.12",
     "mongoose-simple-random": "^0.3.3",
     "morgan": "~1.6.1",
