--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-ejs-layouts": "^2.1.0",
+    "express-session": "^1.13.0",
     "mongoose": "^4.4.12",
     "mongoose-simple-random": "^0.3.3",
     "morgan": "~1.6.1",
