--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-ejs-layouts": "^2.1.0",
     "express-session": "^1.13.0",
     "instagram-node": "^0.5.8",
+    "method-override": "^2.3.5",
     "mongoose": "^4.4.12",
     "mongoose-simple-random": "^0.3.3",
     "morgan": "~1.6.1",
