--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose-simple-random": "^0.3.3",
     "morgan": "~1.6.1",
     "querystring": "^0.2.0",
+    "request": "^2.71.0",
     "serve-favicon": "~2.3.0"
   },
   "repository": {
