--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.1",
     "express-ejs-layouts": "^2.1.0",
     "express-session": "^1.13.0",
+    "instagram-node": "^0.5.8",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.12",
     "mongoose-simple-random": "^0.3.3",
